try to fix resume iframe on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,7 +88,13 @@ html body {
   height: 80vh;
 }
 
-#resume iframe {
+#resume-wrapper {
   width: 100%;
   height: 85%;
+  overflow: scroll;
+}
+
+#resume iframe {
+  width: 100%;
+  height: 100%;
 }
